RESOLVED FIXED304955
REGRESSION(300277@main): [iOS] music.apple.com: Hover effect on playlist rolls with scrolling
https://bugs.webkit.org/show_bug.cgi?id=304955
Summary REGRESSION(300277@main): [iOS] music.apple.com: Hover effect on playlist roll...
Abrar Rahman Protyasha
Reported 2026-01-05 14:30:38 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2026-01-05 15:20:56 PST
EWS
Comment 2 2026-01-13 23:51:13 PST
Committed 305561@main (fb2234a1edb8): <https://commits.webkit.org/305561@main> Reviewed commits have been landed. Closing PR #56111 and removing active labels.
Tim Horton
Comment 3 2026-01-22 10:46:01 PST
*** Bug 305856 has been marked as a duplicate of this bug. ***
Abrar Rahman Protyasha
Comment 4 2026-02-02 10:48:10 PST
*** Bug 305626 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.